Build Java runtime with jlink instead of copying the Corretto JDK (#526)